@@ -387,6 +387,13 @@
 	(erc-make-mode-line-buffer-name): Add help-echo and mouse-face
 	properties to channel name.
 
+2006-08-20  Michael Olson  <mwolson@gnu.org>
+
+	* erc.el (erc-with-server-buffer): New macro that switches to the
+	current ERC server buffer and runs some code.  If no server buffer
+	is available, return nil.  This is a useful way to access
+	variables in the server buffer.
+
 2006-08-14  Diane Murray  <disumu@x3y2z1.net>
 
 	* erc-menu.el: Updated copyright years.  Removed EmacsWiki URL.
